# reaper_libsndfilewrapper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.xml
.github/: CODE_SIGNING.md
.github/workflows/: release.yml
Extensions/: reaper_libsndfilewrapper.ext
WDL/swell/sample_project/sample_project.xcodeproj/project.xcworkspace/xcuserdata/matthias.xcuserdatad/: UserInterfaceState.xcuserstate
_osx_release/reaper_libsndfilewrapper.pmdoc/: 01reaper-contents.xml  01reaper.xml  02libflac-contents.xml  02libflac.xml  03libogg.xml  04libsndfile-contents.xml  04libsndfile.xml  05libvorbis.xml  06libvorbisenc.xml  07reaper.xml  08libflac.xml  09libogg-contents.xml  09libogg.xml  10libsndfile.xml  11libvorbis-contents.xml  11libvorbis.xml  12libvorbisenc-contents.xml  12libvorbisenc.xml  index.xml
_win_release/: reaper_libsndfilewrapper_win32.nsi  reaper_libsndfilewrapper_win64.nsi
cmake/: Findlibsndfile.cmake
reaper_libsndfilewrapper/: libsndfileImport.h  libsndfileimport.cpp  main.cpp  pcmsink_libsndfile.cpp  reaper_libsndfilewrapper.pro  reaper_libsndfilewrapper.vcproj  res.aps  res.rc  res.rc_mac_dlg  resource.h  wrapperclass.cpp  wrapperclass.h
scripts/: build_linux.sh  build_osx.sh  build_win.bat  reapack_index.sh  setup.sh
scripts/installer/: linux_install.sh  reaper_libsndfilewrapper.iss
